force-app/main/default/objects/B25__Reservation_Status__c/B25__Reservation_Status__c.object-meta.xml
<CustomObject>
    <description>The status of a Reservation along with options that influence the Reservation based on the status.</description>
    <label>Reservation Status</label>
    <nameField>
        <label>Reservation Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reservation Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>