force-app/main/default/objects/B25__Reservation_Status__c/fields/B25__AllowDoubleBooking__c.field-meta.xml
<CustomField>
    <fullName>B25__AllowDoubleBooking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By default used in Booker25 to allow double bookings on a Dimension when checked.</description>
    <inlineHelpText>Utilisé par défaut dans Booker25 pour autoriser les réservations doubles pour une dimension lorsque cette case est cochée.</inlineHelpText>
    <label>Allow Double Booking</label>
    <type>Checkbox</type>
</CustomField>