force-app/main/default/objects/B25__Reservation_Status__c/fields/B25__Default__c.field-meta.xml
<CustomField>
    <fullName>B25__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Reservation Status record is the default when creating a Reservation.</description>
    <inlineHelpText>Lorsque cette option est cochée, ce statut de réservation est la valeur par défaut lors de la création d’une réservation.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>