force-app/main/default/objects/B25__Reservation_Status__c/fields/B25__Hide_On_Calendar__c.field-meta.xml
<CustomField>
    <fullName>B25__Hide_On_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select if you want Reservations with this Reservation Status to be hidden on the Calendars.</description>
    <inlineHelpText>Sélectionnez cette option si vous voulez que les réservations avec ce statut de réservation soient masquées sur les calendriers.</inlineHelpText>
    <label>Hide On Calendar</label>
    <type>Checkbox</type>
</CustomField>