force-app/main/default/objects/B25__Reservation_Status__c/fields/B25__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>B25__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, the Reservation Status record will not show up as an option when creating/editing a Reservation.</description>
    <inlineHelpText>Lorsque cette option n’est pas cochée, ce statut de réservation n’apparaîtra pas comme une option lors de la création/modification d’une réservation.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>