force-app/main/default/objects/B25__Reservation_Status__c/fields/B25__Is_Final__c.field-meta.xml
<CustomField>
    <fullName>B25__Is_Final__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this box is checked, normal users can&apos;t edit Reservations with this status.</description>
    <inlineHelpText>Si cette case est cochée, les utilisateurs normaux ne peuvent pas modifier les réservations ayant ce statut.</inlineHelpText>
    <label>Is Final</label>
    <type>Checkbox</type>
</CustomField>