force-app/main/default/objects/B25__Reservation_Status__c/fields/B25__Text_Color__c.field-meta.xml
<CustomField>
    <fullName>B25__Text_Color__c</fullName>
    <description>Hex code or valid CSS color name.</description>
    <inlineHelpText>Code hexadécimal ou nom de couleur CSS valide.</inlineHelpText>
    <label>Text Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>