force-app/main/default/objects/B25__Reservation_Status__c/listViews/B25__All.listView-meta.xml
<ListView>
    <fullName>B25__All</fullName>
    <columns>NAME</columns>
    <columns>B25__Default__c</columns>
    <columns>B25__Is_Active__c</columns>
    <columns>B25__Is_Final__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>